# Trend-Radar

./: README.md  app.py  arxiv_papers.py  google_news.py  google_trends.py  hacker_news.py  huggingface_trends.py  pyproject.toml  reddit_post.py  wikipedia_random.py  yahoo_finance.py  youtube.py
templates/pages/: index.html
