[project]
name = "trend-radar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "gnews>=0.4.1",
    "google-api-python-client>=2.166.0",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "yfinance>=0.2.55",
]
