[project]
name = "trend-radar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask-caching>=2.3.1",
    "flask>=3.1.0",
    "gnews>=0.4.1",
    "google-api-python-client>=2.166.0",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "wikipedia>=1.4.0",
    "yfinance>=0.2.55",
    "arxiv>=2.1.3",
    "nltk>=3.9.1",
    "feedparser>=6.0.11",
    "beautifulsoup4>=4.13.3",
    "praw>=7.8.1",
    "pandas>=2.2.3",
]
